@@ -1,5 +1,7 @@
 NOCC 0.9.5	??   ??, 2001
 
+	* Added logic patch for displaying images (from Colin Stephenson #427202).
+	* Added 'Loading image ...' message.
 	* Header displays email address from preferences, if available.
 	* Added 'CC self' preference to receive a copy of outgoing emails.
 	* Added Bulgarian translation
